# strong_type

./: .cirrus.yml  CMakeLists.txt  ChangeLog  Makefile  README.md  strong_type-config.cmake  test.cpp  test_fmt.cpp  test_main.cpp
.github/workflows/: ci.yml
config/ci/: Dockerfile
include/: strong_type.hpp
include/strong_type/: affine_point.hpp  arithmetic.hpp  bicrementable.hpp  bitarithmetic.hpp  boolean.hpp  convertible_to.hpp  decrementable.hpp  difference.hpp  equality.hpp  equality_with.hpp  formattable.hpp  hashable.hpp  implicitly_convertible_to.hpp  incrementable.hpp  indexed.hpp  invocable.hpp  iostreamable.hpp  istreamable.hpp  iterator.hpp  ordered.hpp  ordered_with.hpp  ostreamable.hpp  pointer.hpp  range.hpp  regular.hpp  saturating_arithmetic.hpp  scalable_with.hpp  semiregular.hpp  strong_ordering.hpp  strong_type.hpp  strong_type.ixx  three_way.hpp  type.hpp  unique.hpp
test/: CMakeLists.txt  catch2.hpp  empty.cpp  test.cpp  test_affine_point.cpp  test_arithmetic.cpp  test_bicrementable.cpp  test_bitarithmetic.cpp  test_boolean.cpp  test_convertible_to.cpp  test_decrementable.cpp  test_difference.cpp  test_equality.cpp  test_equality_with.cpp  test_fmt.cpp  test_hashable.cpp  test_implicitly_convertible_to.cpp  test_incrementable.cpp  test_indexed.cpp  test_invocable.cpp  test_iostreamable.cpp  test_istreamable.cpp  test_iterator.cpp  test_main.cpp  test_ordered.cpp  test_ordered_with.cpp  test_ostreamable.cpp  test_pointer.cpp  test_range.cpp  test_regular.cpp  test_saturating.cpp  test_scalable_with.cpp  test_semiregular.cpp  test_size.cpp  test_three_way.cpp  test_type.cpp  test_unique.cpp  test_utils.hpp
test/test_fmt10/: CMakeLists.txt
test/test_fmt11/: CMakeLists.txt
test/test_fmt12/: CMakeLists.txt
test/test_fmt8/: CMakeLists.txt
test/test_fmt9/: CMakeLists.txt
test_fmt8/: CMakeLists.txt
